--- a/CLDV-POE-ST10249266.csproj
+++ b/CLDV-POE-ST10249266.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>CLDV_POE_ST10249266</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
 </Project>
